@@ -419,13 +419,13 @@ L<https://github.com/michal-josef-spacek/Tags-Output-LibXML>
 
 =head1 AUTHOR
 
-Michal Špaček L<skim@cpan.org>
+Michal Josef Špaček L<skim@cpan.org>
 
 L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
-© 2011-2020 Michal Špaček
+© 2011-2020 Michal Josef Špaček
 
 BSD 2-Clause License
 
