@@ -6,6 +6,7 @@
  - Improve SYNOPSIS section in doc.
  - Update Module::Install to 1.19 version.
  - Update author github username.
+ - Update author name.
  - Update copyright years.
 
 0.02 2015-10-29T22:56:13+01:00
